--- a/biblio.bib
+++ b/biblio.bib
@@ -43,9 +43,30 @@ doi = {10.1145/3338906.3342509}
 }
 
 % esempio citazione pagina web di un progetto
+@misc{gazzettaufficiale,
+  author={{gazzettaufficiale.it}},
+  note={\url{https://www.gazzettaufficiale.it/atto/serie_generale/caricaDettaglioAtto/originario?atto.dataPubblicazioneGazzetta=2000-02-29&atto.codiceRedazionale=000G0071&elenco30giorni=false}}
+}
+
+@inproceedings{silver,
+    title = "Turning silver into gold: error-focused corpus reannotation with active learning",
+    author = "M{\'e}nard, Pierre Andr{\'e}  and
+      Mougeot, Antoine",
+    booktitle = "Proceedings of the International Conference on Recent Advances in Natural Language Processing (RANLP 2019)",
+    month = sep,
+    year = "2019",
+    address = "Varna, Bulgaria",
+    publisher = "INCOMA Ltd.",
+    url = "https://aclanthology.org/R19-1088",
+    doi = "10.26615/978-954-452-056-4_088",
+    pages = "758--767",
+    abstract = "While high quality gold standard annotated corpora are crucial for most tasks in natural language processing, many annotated corpora published in recent years, created by annotators or tools, contains noisy annotations. These corpora can be viewed as more silver than gold standards, even if they are used in evaluation campaigns or to compare systems{'} performances. As upgrading a silver corpus to gold level is still a challenge, we explore the application of active learning techniques to detect errors using four datasets designed for document classification and part-of-speech tagging. Our results show that the proposed method for the seeding step improves the chance of finding incorrect annotations by a factor of 2.73 when compared to random selection, a 14.71{\%} increase from the baseline methods. Our query method provides an increase in the error detection precision on average by a factor of 1.78 against random selection, an increase of 61.82{\%} compared to other query approaches.",
+}
+
+% esempio citazione pagina web di un progetto
 @misc{spacyCli,
   author={{IQAndreas}},
-https://spacy.io/api/cli}}
+  note={\url{https://spacy.io/api/cli}}
 }
 
 % esempio citazione pagina web di un progetto
