--- a/flow_chart_hil.tex
+++ b/flow_chart_hil.tex
@@ -64,8 +64,8 @@
 			\draw [arrow] (l) -- (train);
 			\node (nn) 		[state, below=1cm of train] {\(nn\sb{i}\)};
 			\draw [arrow] (train) -- (nn);
-			\node (module) [process, right of=nn] {\(NER\sb{NNi}\)};
-			\draw [arrow] (nn) -- (module);
+			%\node (module) [process, right of=nn] {\(NER\sb{NNi}\)};
+			%\draw [arrow] (nn) -- (module);
 			%\node (entities) [state, below of=module] {\(Entities\)};
 			%\node (entitiescorr) [state, above of=module] {\(labels\sb{i}\)};
 			%\draw [arrow] (module) -- (entities);
