--- a/flow_chart_hil.tex
+++ b/flow_chart_hil.tex
@@ -62,7 +62,7 @@
 			\draw [arrow] (l) --  ++(+2cm,0cm)-| (humcorr); % node[pos=0.25] {2}  node[pos=0.75] {3};
 			\node (train) 	[process, below=0.5cm of l] {\(training\)};
 			\draw [arrow] (l) -- (train);
-			\node (nn) 		[state, below=1cm of train] {\(nn\sb{i}\)};
+			\node (nn) 		[state, below=1cm of train] {\(NN\sb{i}\)};
 			\draw [arrow] (train) -- (nn);
 			%\node (module) [process, right of=nn] {\(NER\sb{NNi}\)};
 			%\draw [arrow] (nn) -- (module);
