--- a/capitoli/chapter5.tex
+++ b/capitoli/chapter5.tex
@@ -8,19 +8,19 @@
 % 
 \chapter[Valutazione dei risultati][]{5. Valutazione dei risultati}
 
-Dopo l'implementazione dei prototipi NER-regex e NER-ML, possiamo introdurre la loro valutazione con l'uso di un apposito Scorer.
+Dopo l'implementazione dei prototipi NER\_regex e NER\_ML, possiamo introdurre la loro valutazione con l'uso di un apposito Scorer.
 Dato un sistema NER, lo Scorer fornisce delle misure di affidabilità dell'NER stesso in termini di \textbf{precision}, \textbf{recall} e \textbf{accuracy}.
 
 
 
 \section{Confronto tra regex e ML}
-Nella tabella scores-comparisons.pdf \ref{fig:v1-nums} riportiamo i valori di Precision, Recall e Accuracy ottenuti per ogni entità contemplata nel task di classificazione, sia nel caso di NER-regex che nel caso NER-ML.
+Nella tabella scores-comparisons.pdf \ref{fig:v1-nums} riportiamo i valori di Precision, Recall e Accuracy ottenuti per ogni entità contemplata nel task di classificazione, sia nel caso di NER\_regex che nel caso NER\_ML.
 Le regex considerate sono le seguenti:
  \[regex-soa\sb{wl-v1}=\textsc{\char13}O(S|G)(\\d\\d?)\textsc{\char13} \]  \[ regex-class\sb{wl-v1}=\textsc{\char13}(IV|IV|III|II|IX|VIII|VII|VI|X|V|I)\textsc{\char13} \]
 
 
 
-Si può facilmente notare come molte entità di tipo \textbf{Categoria} vedono valori di precision recall e accuracy migliori nell'approccio Machine Learning; in particolare sono stati evidenziati in verde i valori di precision, recall ed f1-score che in NER-ML superano almeno dello 0.05 i corrispondenti valori registrati dall'NER-regex. 
+Si può facilmente notare come molte entità di tipo \textbf{Categoria} vedono valori di precision recall e accuracy migliori nell'approccio Machine Learning; in particolare sono stati evidenziati in verde i valori di precision, recall ed f1-score che in NER\_ML superano almeno dello 0.05 i corrispondenti valori registrati dall'NER\_regex. 
 In un caso (entity type OG-4) si registra un peggioramento delle performance del Machine Learning, che abbatte a zero le score.
 Questo può essere spiegato con la mancanza di esempi numerosi per alcune entità: 
 ciò porterebbe il modello a funzionare molto bene nel riconoscere le entità ben rappresentate dalla ground truth,
@@ -30,7 +30,7 @@ ma anche a funzionare peggio per tutte le entità meno note.
 \captionof{figure}{confronto tra l'approccio regex(sinistra) e NN(destra)}
 \label{fig:v1-nums}
 
-Come sottolineato precedentemente, l'approccio NER-regex non ha grandi margini di miglioramento dell'accuratezza:
+Come sottolineato precedentemente, l'approccio NER\_regex non ha grandi margini di miglioramento dell'accuratezza:
 in sintesi è un approccio rigido, che in caso di inclusione di nuovi pattern testuali 
 richiederebbe la continua modifica di una regex in forme sempre più complesse, risolvendosi in
 problemi di manutenzione, di testing, di leggibilità e talvolta di sicurezza.
@@ -41,16 +41,16 @@ si potrebbe ricorrere al modello regex per le entità meno assimilate dal modello
 , preferendo invece quest'ultimo per le entità su cui gli score descrivono prestazioni migliori.
 
 Nell'istogramma in figura \ref{fig:v1-hist} si confrontano le medie di P,R,F1 nel caso della regex e nel caso
-dell'NER-ML. Le regex fin qui considerate sono regex non complicate, possono certamente essere migliorate per coprire
+dell'NER\_ML. Le regex fin qui considerate sono regex non complicate, possono certamente essere migliorate per coprire
 una casistica di scritture più estesa: prevedendo degli spazi aggiuntivi, prevedendo separatori alternativi e prevedendo 
 l'uso combinato di lettere maiuscole e minuscole.
 Tuttavia, come sottolineato precedentemente, caratteristica fondamentale dei dati è essere usati nella letteratura 
 burocratica: in quest'ambito, colui che scrive il documento formale può ad esempio scrivere \say{OG4}, ma anche \say{Opera Generale numero quattro} e ancora \say{Op.Gen.num.4}, per cui risulta ingiustificato investire tempo per ottenere una regex \say{ottimale}.
-Un'alternativa potrebbe nascere dalla combinazione dell'uso del NER-regex e del NER-ML.
+Un'alternativa potrebbe nascere dalla combinazione dell'uso del NER\_regex e del NER\_ML.
 
 \includegraphics[clip, width=0.6\textwidth,height=0.6\textheight,keepaspectratio, page=1]{regex-v1-vs-ml.pdf} 
 %	\captionof{figure}{confronto tra l'approccio regex(sinistra) e NN(destra)}
-\caption{Da sinistra: Valori di P,R,F del NER-regex-v1 e del NER-ML}
+\caption{Da sinistra: Valori di P,R,F del NER\_regex-v1 e del NER\_ML}
 \label{fig:v1-hist}
 
 
@@ -150,8 +150,9 @@ L'attività umana \textbf{\(correct\sb{k}labels\)}, partendo dalle weak labels co
 \label{fig:hitl}
 %\end{left}
 
-Il risultato del loop è l'addestramento della rete neurale n-esima \(nn\sb{n}\) utilizzabile per effettuare il task di 
-\acrshort{named-entity-recognition}.
+Il risultato del loop è l'addestramento della rete neurale n-esima \(NN\sb{n}\) utilizzabile per effettuare il task di 
+\acrshort{named-entity-recognition}. Chiameremo \(NER\_HITL\sb{n}\) il task di NER condotto con la  \(NN\sb{n}\) così prodotta
+a valle del loop.
 
 
 L'uso dello \acrlong{human-in-the-loop} può essere vantaggioso se effettuato in maniera tale da:
@@ -168,50 +169,60 @@ delle correzioni umane apportate alle weak labels: viene
 rappresentato il guadagno in termini di \acrlong{Precision}, \acrlong{Recall} e \acrlong{F1-score}.
 In vari esperimenti analoghi a quello riportato in figura \ref{fig:hitl} si evince come in dieci iterazioni di correzione il %sistema guadagni oltre il 22\% di \acrlong{Precision}, 34\% di \acrlong{Recall} e 32\% di \acrlong{F1-score}.
 sistema valutato in termini di  \acrshort{Precision}, \acrshort{Recall}, \acrshort{F1-score} riporti i guadagni minimi:
-\[\Delta\sb{i=10}(P,R,F1)=(22\%,34\%, 32\%)\]
-È interessante notare come alla settima iterazione correttiva tali guadagni ammontano già al
-\[\Delta\sb{i=7}(P,R,F1)=(21\%,33\%, 31\%)\]
+\[\Delta(p)\sb{i=10}=(22\%)\]
+\[\Delta(r)\sb{i=10}=(34\%)\]
+\[\Delta(f)\sb{i=10}=(32\%)\]
+%È interessante notare come alla settima iterazione correttiva tali guadagni ammontano già al \[\Delta\sb{i=7}(P,R,F1)=(21\%,33\%, 31\%)\]
 
 
 \center
 \includegraphics[]{table_deltas.pdf}
 %\includegraphics[]{PlotFunctionData_hitl_vs_ml_notitle.pdf}
-\caption{I valori di p,r,e f1 di NER-HITL-v1 e scarti rispetto a NER-ML}
+\caption{I valori di p,r,e f1 di NER\_HITL-v1 e scarti rispetto a NER\_ML}
 \label{fig:ist}
 \center
 
-Portando il discorso ai risultati specifici dell'esperimento al grafico \ref{fig:hitl}, l'iterazione numero dieci porta ai valori \[[P,R,F]\sb{NER-HITL}=[0.8458, 0.7071, 0.7527 ] \] a fronte dei valori 
-del sistema NER-ML costruito sulla \textit{ground truth} \[[P,R,F]\sb{NER-ML}= [0.8476, 0.7778, 0.7973] \]. 
-Possiamo osservare lo stesso specifico esperimento  alla tabella \ref{fig:ist}, dove forniamo anche 
-un calcolo degli scarti tra i valori del NER-ML e i valori dello HITL ad ogni iterazione \textit{i}.
+È da notare come l'iterazione numero dieci registri i valori:
+\[P\sb{i}=0.8458 \]
+\[R\sb{i}=0.7071 \] 
+\[F\sb{i}=0.7527  \] 
+a fronte dei valori del sistema NER\_ML costruito sulla \textit{ground truth} 
+\[P\sb{NER\_ML}=0.8476\] 
+\[R\sb{NER\_ML}=0.7778\] 
+\[F\sb{NER\_ML}=0.7973\] 
+Possiamo osservare lo stesso specifico esperimento alla tabella \ref{fig:ist}, dove forniamo anche 
+un calcolo degli scarti tra i valori del NER\_ML e i valori dello HITL ad ogni iterazione \textit{i}.
 %width=\textwidth,height=\textheight,keepaspectratio]{PlotFunctionData_hitl_vs_ml.pdf} \caption{} \label{fig:hitlvsml}
-Si nota come le prestazioni di  \(NER-HITL\sb{n}\) tendano a migliorare all'aumentare delle iterazioni \(n\).
+Si nota come le prestazioni di  \(NER\_HITL\sb{n}\) tendano a migliorare all'aumentare delle iterazioni \(n\).
 
 \raggedright
 \paragraph{I dataset adoperati}
-Nel caso ML sono state necessarie 2218 annotazioni gold prodotte da un annotatore umano;
+Nel caso ML sono state necessarie \(#annot-ML = 2218\) annotazioni gold prodotte da un annotatore umano;
 di questo numero di annotazioni totale, 1500 vanno a costituire il training set ML.
-Considerando invece il caso del sistema HITL, il training set adopera 1428 annotazioni gold, 
+Considerando invece il caso del sistema HITL, vengono corrette \(#annot-HITL\sb{10}=1428\) annotazioni silver, 
 di cui 1000 sono impiegate al fine di
-correggere le annotazioni precedentemente prodotte con regex ( 1315 annotazioni prodotte con regex).
-Dunque l'esperimento HITL adopera internamente 790 annotazioni in meno.
-Va considerato però il tempo di produzione delle annotazioni gold e silver:
-se la produzione di un'annotazione gold richiede 14  secondi,
-la correzione di un'annotazione silver richiede soli 6,52 secondi mediamente.
-Confrontando dunque l'impiego di tempo dei due tipi di annotazione:
-2218*14 nel caso ML
-1300*6.52 nel caso HITL
-risulta che abbiamo risparmiato 2218*14-1300* 6.52 = più di 6 ore per la produzione del dataset.
-In questo senso, ricorrere al sistema HITL fa risparmiare una percentuale pari al 72\% del tempo totale di annotazione.
+correggere le annotazioni precedentemente prodotte con regex (1315 annotazioni prodotte con regex).
+Dunque l'esperimento HITL adopera internamente \(#annot-ML (#annot-HITL\sb{10}=790\) annotazioni in meno.
+Va considerato però il tempo di produzione delle annotazioni gold e \(silver\sb{corrected}\):
+se la produzione di un'annotazione gold richiede \(t\sb{gold-single-annot}=14 s\),
+la correzione di un'annotazione silver richiede soli \(t\sb{single-silver-correct}=6,52\) secondi mediamente.
+Confrontando dunque il tempo usato dall'operatore umani per i due scenar di annotazione,
+risulta che abbiamo risparmiato
+ \(t\sb{ML-annot}- t\sb{silver-correct}= (2218\cdot14) s-(1300\cdot6.52) s = 22576 s\) 
+ pari a più di 6 ore per la produzione del dataset.
+In questo senso, ricorrere al sistema HITL fino all'iterazione \texti{i=10} 
+fa risparmiare una percentuale pari al 72\% del tempo totale di annotazione.
 
 
 \paragraph{HITL-14}
-Proseguendo il ciclo di addestramento del sistema HITL, nell'esperimento descritto in figura \ref{fig:hitl} si ottiene il superamento delle prestazioni del NER-ML all'iterazione \(i=14\).
+Se la precision \(p\sb{10}\) del sistema \(NER\_HITL\sb{10}\) è soddisfacente, abbiamo mostrato una \(r\sb{10}\) che 
+dello 0.70, pari a 7 punti percentuali inferiori rispetto alla \(NER\_ML\).
+Possiamo dunque decidere di incrementare il numero di correzioni a dataset e proseguire con ulteriori iterazioni.
+All'iterazione \(i=14\) abbiamo ottenuto il superamento delle prestazioni misurate dalla \(NER\_ML\).
 Si registrano i  valori:
-\[p=0.8823, r=0.7723, f=0.8141\]
-Per raggiungere l'iterazione 14, è necessario fornire 2000 annotazioni human-corrected.
-La loro produzione richiede un tempo pari a 2000*6.52, che confrontato a annot-time-ML=2218*14 costituisce un
-risparmio del 58\% del tempo di annotazione del NER-ML.
+\[p\sb{H14}=0.8823, r\sb{H14}=0.7723, f\sb{H14}=0.8141\]
+Per raggiungere l'iterazione 14 è stato necessario fornire \(#annot-HITL\sb{10}=2000 s\) annotazioni \(silver\sb{corrected}\).
+La loro produzione richiede un tempo pari a \( t\sb{silver-correct}=2000\cdot6.52\), che confrontato a \(t\sb{ML-annot}\) comporta un risparmio del 58\% del tempo di annotazione del NER\_ML.
 
 
 
@@ -223,5 +234,12 @@ risparmio del 58\% del tempo di annotazione del NER-ML.
 % hitl p 0.845849682049472 r 0.707145200862464 f 0.752779411712778
 % gold p 0.847669252797008 r 0.777828714411617 f 0.797399765346802
 
+
+Possiamo constatare che nel complesso lo schema HITL ha permesso di realizzare due esperimenti alquanto interessanti.
+Se la resa di HITL-10 risulta infatti non ottimale, dobbiamo tenere in considerazione che apporta il vantaggio di
+ridurre drasticamente il tempo umano d'annotazione (72\% in meno rispetto a \(time\sb{annotML}\)} avvalendosi di un numero
+di annotazioni \(n\sb{annotHITL10}=1300\) molto inferiore al numero di annotazioni \(n\sb{annotML}=2218\) utilizzate nell'approccio NER\_ML puro.
+È da notare l'iterazione HITL-14 che, adoperando un numero di annotazioni pari a\(n\sb{annotHITL14}=2000\) maggiore rispetto al caso \(i=10\), ottiene delle performance superiori al NER\_ML richiedendo un tempo d'annotazione molto minore rispetto al
+NER\_ML stesso.
 
 
